--- a/docs/src/main/asciidoc/mongodb-panache.adoc
+++ b/docs/src/main/asciidoc/mongodb-panache.adoc
@@ -637,6 +637,17 @@ TIP: Using `@BsonProperty` is not needed to define custom column mappings, as th
 
 TIP: You can have your projection class extends from another class. In this case, the parent class also needs to have use `@ProjectionFor` annotation.
 
+== Query debugging
+
+As MongoDB with Panache allows writing simplified queries, it is sometimes handy to log the generated native queries for debugging purpose.
+
+This can be achieved by setting to DEBUG the following log category inside your `application.properties`:
+
+[source,properties]
+----
+quarkus.log.category."io.quarkus.mongodb.panache.runtime".level=DEBUG
+----
+
 == Transactions
 
 WARNING: MongoDB offers ACID transactions since version 4.0. MongoDB with Panache doesn't provide support for them.
@@ -855,7 +866,6 @@ public Multi<ReactivePerson> streamPersons() {
 ----
 
 TIP: `@SseElementType(MediaType.APPLICATION_JSON)` tells RESTEasy to serialize the object in JSON.
-
 
 == How and why we simplify MongoDB API
 
