--- a/docs/src/main/asciidoc/kafka-streams.adoc
+++ b/docs/src/main/asciidoc/kafka-streams.adoc
@@ -116,7 +116,8 @@ import java.util.stream.Collectors;
 import javax.enterprise.context.ApplicationScoped;
 
 import org.eclipse.microprofile.reactive.messaging.Outgoing;
-import org.jboss.logging.Logger;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import io.reactivex.Flowable;
 import io.smallrye.reactive.messaging.kafka.KafkaRecord;
@@ -130,7 +131,7 @@ import io.smallrye.reactive.messaging.kafka.KafkaRecord;
 @ApplicationScoped
 public class ValuesGenerator {
 
-    private static final Logger LOG = Logger.getLogger(ValuesGenerator.class);
+    private static final Logger LOG = LoggerFactory.getLogger(ValuesGenerator.class);
 
     private Random random = new Random();
 
@@ -167,7 +168,7 @@ public class ValuesGenerator {
     @Outgoing("weather-stations")                               // <3>
     public Flowable<KafkaRecord<Integer, String>> weatherStations() {
         List<KafkaRecord<Integer, String>> stationsAsJson = stations.stream()
-            .map(s -> KafkaMessage.of(
+            .map(s -> KafkaRecord.of(
                     s.id,
                     "{ \"id\" : " + s.id +
                     ", \"name\" : \"" + s.name + "\" }"))
@@ -297,6 +298,7 @@ import java.math.RoundingMode;
 
 import io.quarkus.runtime.annotations.RegisterForReflection;
 
+@RegisterForReflection
 public class Aggregation {
 
     public int stationId;
